change font and bkg

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>bearko.de</title>
+    <link href="https://fonts.googleapis.com/css2?family=Offside&family=Workbench&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -12,8 +13,15 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background: linear-gradient(135deg, #0f0f0f 0%, #1a1410 50%, #0d1410 100%);
+            font-family: 'Offside', sans-serif;
+            background: 
+                radial-gradient(circle at 20% 50%, rgba(45, 90, 61, 0.12) 0%, transparent 50%),
+                radial-gradient(circle at 80% 80%, rgba(75, 59, 82, 0.1) 0%, transparent 50%),
+                radial-gradient(circle at 40% 20%, rgba(107, 68, 35, 0.08) 0%, transparent 50%),
+                linear-gradient(135deg, #0f0f0f 0%, #1a1410 50%, #0d1410 100%);
+            background-size: 200% 200%, 250% 250%, 220% 220%, 100% 100%;
+            background-attachment: fixed;
+            animation: drift 25s ease-in-out infinite;
             color: #e8e8e8;
             min-height: 100vh;
             display: flex;
@@ -39,7 +47,20 @@
             }
         }
 
+        @keyframes drift {
+            0% {
+                background-position: 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+            }
+            50% {
+                background-position: 100% 100%, -50% 50%, 50% -50%, 0% 0%;
+            }
+            100% {
+                background-position: 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+            }
+        }
+
         h1 {
+            font-family: 'Workbench', serif;
             font-size: 4rem;
             font-weight: 700;
             margin-bottom: 10px;
