--- a/test/fbm-test.html
+++ b/test/fbm-test.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fBm Nebula Test</title>
+    <link href="https://fonts.googleapis.com/css2?family=Offside&family=Workbench&display=swap" rel="stylesheet">
     <style>
-        html, body { margin:0; padding:0; height:100%; overflow:hidden; background:#050505; }
+        html, body { margin:0; padding:0; height:100%; overflow:hidden; background:#050505; font-family:'Offside', sans-serif; }
         canvas { display:block; }
         .note { position:absolute; top:20px; left:20px; color:#e8e8e8; font-family:Offside, sans-serif; }
     </style>
