--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>bearko.de</title>
-    <link href="https://fonts.googleapis.com/css2?family=Offside&family=Workbench&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -13,15 +12,32 @@
         }
 
         body {
-            font-family: 'Offside', sans-serif;
-            background: 
-                radial-gradient(circle at 20% 50%, rgba(45, 90, 61, 0.12) 0%, transparent 50%),
-                radial-gradient(circle at 80% 80%, rgba(75, 59, 82, 0.1) 0%, transparent 50%),
-                radial-gradient(circle at 40% 20%, rgba(107, 68, 35, 0.08) 0%, transparent 50%),
-                linear-gradient(135deg, #0f0f0f 0%, #1a1410 50%, #0d1410 100%);
-            background-size: 200% 200%, 250% 250%, 220% 220%, 100% 100%;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            /* START: Cosmos Background Style */
+            background:
+                /* Layer 1: A long, wispy green tendril. */
+                radial-gradient(ellipse 90% 40% at 20% 30%, hsla(145, 38%, 25%, 0.4), transparent 60%),
+                /* Layer 2: A stretched brown tendril for contrast. */
+                radial-gradient(ellipse 40% 80% at 80% 90%, hsla(28, 44%, 25%, 0.35), transparent 60%),
+                /* Layer 3: A wide, soft purple cloud. */
+                radial-gradient(ellipse 80% 50% at 50% 60%, hsla(280, 15%, 28%, 0.4), transparent 65%),
+                /* Layer 4: Another wispy green tendril for depth. */
+                radial-gradient(ellipse 50% 90% at 10% 80%, hsla(145, 38%, 25%, 0.3), transparent 60%),
+                /* Base Layer: A very dark, near-black linear gradient */
+                linear-gradient(135deg, #0a0a0a 0%, #141110 50%, #0a0f10 100%);
+            
+            background-size: 300% 300%, 350% 350%, 320% 320%, 380% 380%, 100% 100%;
             background-attachment: fixed;
-            animation: drift 25s ease-in-out infinite;
+
+            animation: 
+                fadeIn 0.8s ease-in, /* Keep existing fadeIn animation */
+                swirl1 25s ease-in-out infinite, 
+                swirl2 30s ease-in-out infinite reverse,
+                swirl3 28s ease-in-out infinite;
+            
+            filter: blur(0.5px);
+            /* END: Cosmos Background Style */
+
             color: #e8e8e8;
             min-height: 100vh;
             display: flex;
@@ -47,20 +63,33 @@
             }
         }
 
-        @keyframes drift {
-            0% {
-                background-position: 0% 0%, 0% 0%, 0% 0%, 0% 0%;
-            }
-            50% {
-                background-position: 100% 100%, -50% 50%, 50% -50%, 0% 0%;
-            }
-            100% {
-                background-position: 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+        /* Keyframes for the cosmos background animation */
+        @keyframes swirl1 {
+            0%   { background-position: 0% 50%, 100% 50%, 50% 0%, 0% 100%, 0% 0%; }
+            25%  { background-position: 50% 0%, 50% 100%, 100% 50%, 50% 50%, 0% 0%; }
+            50%  { background-position: 100% 50%, 0% 50%, 50% 100%, 80% 0%, 0% 0%; }
+            75%  { background-position: 50% 100%, 50% 0%, 0% 50%, 30% 20%, 0% 0%; }
+            100% { background-position: 0% 50%, 100% 50%, 50% 0%, 0% 100%, 0% 0%; }
+        }
+
+        @keyframes swirl2 {
+            0%   { background-position: 100% 0%, 0% 100%, 0% 50%, 100% 50%, 0% 0%; }
+            25%  { background-position: 50% 50%, 30% 0%, 80% 100%, 50% 100%, 0% 0%; }
+            50%  { background-position: 0% 0%, 100% 50%, 30% 0%, 0% 50%, 0% 0%; }
+            75%  { background-position: 20% 50%, 50% 100%, 100% 20%, 30% 0%, 0% 0%; }
+            100% { background-position: 100% 0%, 0% 100%, 0% 50%, 100% 50%, 0% 0%; }
+        }
+
+        @keyframes swirl3 {
+            0%   { background-position: 50% 100%, 50% 0%, 100% 50%, 50% 100%, 0% 0%; }
+            25%  { background-position: 0% 50%, 100% 0%, 50% 100%, 80% 50%, 0% 0%; }
+            50%  { background-position: 100% 100%, 0% 50%, 0% 0%, 100% 0%, 0% 0%; }
+            75%  { background-position: 50% 0%, 20% 100%, 50% 50%, 0% 100%, 0% 0%; }
+            100% { background-position: 50% 100%, 50% 0%, 100% 50%, 50% 100%, 0% 0%; }
             }
         }
 
         h1 {
-            font-family: 'Workbench', serif;
             font-size: 4rem;
             font-weight: 700;
             margin-bottom: 10px;
